--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
@@ -370,8 +369,8 @@
             <li class="location_sidenav_header">Contains the following practices:</li>
             <li class="location_sidenav_other_info">
                 <p class="location_sidenav_other_info_list" onclick="openPracticesSidebar(8)">9th Floor: Center for Comprehensive Care</p>
-                <p class="location_sidenav_other_info_list" onclick="openPracticesSidebar(9)">2nd(??) Floor: Neurology</p>
-                <p class="location_sidenav_other_info_list" onclick="openPracticesSidebar(10)">2nd/1st Floor: Oncology</p>
+                <p class="location_sidenav_other_info_list" onclick="openPracticesSidebar(9)">2nd/1st Floor: Oncology</p>
+                <p class="location_sidenav_other_info_list" onclick="openPracticesSidebar(10)">1st Floor: Neurology</p>
             </li>
             <li><button type="submit" class="location_sidenav_ambulatory_getDirections" onclick="openDirectionsSidebar(3)">Get Directions</button></li>
         </ul>
@@ -3627,22 +3626,6 @@
             <li><button type="submit" class="location_sidenav_practices_getDirections" onclick="openDirectionsSidebar(3)">Get Directions</button></li>
         </ul>
     </div>
-    <div class="location_sidenav" id="neurology_practices_sidebar">
-        <ul>
-            <li class="location_sidenav_name_practices"><a onclick="openLocationSidebar(3)"><i class="fa fa-arrow-circle-o-left fa-3x"></i></a><h2>Neurology</h2></li>
-            <li class="location_sidenav_header">Building:</li>
-            <li class="location_sidenav_address">Milstein Building: 2nd(??) Floor</li>
-            <li class="location_sidenav_header">Hours of Operation:</li>
-            <li class="location_sidenav_other_info">
-                <p class="location_sidenav_other_info_list">_____(currently unknown)_____</p>
-            </li>
-            <li class="location_sidenav_header">Practice Administrator:</li>
-            <li class="location_sidenav_other_info">
-                <p class="location_sidenav_other_info_list">N/A</p>
-            </li>
-            <li><button type="submit" class="location_sidenav_practices_getDirections" onclick="openDirectionsSidebar(3)">Get Directions</button></li>
-        </ul>
-    </div>
     <div class="location_sidenav" id="oncology_practices_sidebar">
         <ul>
             <li class="location_sidenav_name_practices"><a onclick="openLocationSidebar(3)"><i class="fa fa-arrow-circle-o-left fa-3x"></i></a><h2>Oncology</h2></li>
@@ -3655,6 +3638,22 @@
             <li class="location_sidenav_header">Practice Administrator:</li>
             <li class="location_sidenav_other_info">
                 <p class="location_sidenav_other_info_list">Michael Giambalvo</p>
+            </li>
+            <li><button type="submit" class="location_sidenav_practices_getDirections" onclick="openDirectionsSidebar(3)">Get Directions</button></li>
+        </ul>
+    </div>
+    <div class="location_sidenav" id="neurology_practices_sidebar">
+        <ul>
+            <li class="location_sidenav_name_practices"><a onclick="openLocationSidebar(3)"><i class="fa fa-arrow-circle-o-left fa-3x"></i></a><h2>Neurology</h2></li>
+            <li class="location_sidenav_header">Building:</li>
+            <li class="location_sidenav_address">Milstein Building: 1st Floor</li>
+            <li class="location_sidenav_header">Hours of Operation:</li>
+            <li class="location_sidenav_other_info">
+                <p class="location_sidenav_other_info_list">_____(currently unknown)_____</p>
+            </li>
+            <li class="location_sidenav_header">Practice Administrator:</li>
+            <li class="location_sidenav_other_info">
+                <p class="location_sidenav_other_info_list">N/A</p>
             </li>
             <li><button type="submit" class="location_sidenav_practices_getDirections" onclick="openDirectionsSidebar(3)">Get Directions</button></li>
         </ul>
