--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
             <li class="step_by_step_directions" id="concourse_campus_step_by_step_directions">
             </li>
             <li class="send_directions_options" id="concourse_campus_send_directions_options">
-                <button type="submit" class="print_directions" onclick="printDirections(0)">Print</button>
+                <button type="submit" class="print_directions">Print</button>
                 <button type="submit" class="email_directions" onclick="sendEmail(0)">Email</button>
-                <!-- <button type="submit" class="text_directions">Text</button> -->
+                <button type="submit" class="text_directions">Text</button>
             </li>
         </ul>
     </div>
@@ -293,9 +293,9 @@
             <li class="step_by_step_directions" id="fulton_campus_step_by_step_directions">
             </li>
             <li class="send_directions_options" id="fulton_campus_send_directions_options">
-                <button type="submit" class="print_directions" onclick="printDirections()">Print</button>
+                <button type="submit" class="print_directions">Print</button>
                 <button type="submit" class="email_directions" onclick="sendEmail(1)">Email</button>
-                <!-- <button type="submit" class="text_directions">Text</button> -->
+                <button type="submit" class="text_directions">Text</button>
             </li>
         </ul>
     </div>
@@ -354,9 +354,9 @@
             <li class="step_by_step_directions" id="health_wellness_center_step_by_step_directions">
             </li>
             <li class="send_directions_options" id="health_wellness_center_send_directions_options">
-                <button type="submit" class="print_directions" onclick="printDirections()">Print</button>
+                <button type="submit" class="print_directions">Print</button>
                 <button type="submit" class="email_directions" onclick="sendEmail(2)">Email</button>
-                <!-- <button type="submit" class="text_directions">Text</button> -->
+                <button type="submit" class="text_directions">Text</button>
             </li>
         </ul>
     </div>
@@ -482,7 +482,7 @@
             </li>
             <li class="location_sidenav_header">Practice Administrator:</li>
             <li class="location_sidenav_other_info">
-                <p class="location_sidenav_other_info_list">Ileana Lopez</p>
+                <p class="location_sidenav_other_info_list">Stephanie Taveras</p>
             </li>
             <li><button type="submit" class="location_sidenav_ambulatory_getDirections" onclick="openDirectionsSidebar(5)">Get Directions</button></li>
         </ul>
@@ -3829,7 +3829,7 @@
             </li>
             <li class="location_sidenav_header">Practice Administrator:</li>
             <li class="location_sidenav_other_info">
-                <p class="location_sidenav_other_info_list">Chaka Usher</p>
+                <p class="location_sidenav_other_info_list">Stephanie Taveras</p>
             </li>
             <li><button type="submit" class="location_sidenav_practices_getDirections" onclick="openDirectionsSidebar(58)">Get Directions</button></li>
         </ul>
@@ -3878,6 +3878,10 @@
             <li class="location_sidenav_header">Practice Administrator:</li>
             <li class="location_sidenav_other_info">
                 <p class="location_sidenav_other_info_list">Chaka Usher</p>
+            </li>
+            <li class="location_sidenav_header">Office Manager:</li>
+            <li class="location_sidenav_other_info">
+                <p class="location_sidenav_other_info_list">Lee Nesifort</p>
             </li>
             <li><button type="submit" class="location_sidenav_practices_getDirections" onclick="openDirectionsSidebar(58)">Get Directions</button></li>
         </ul>
