--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
@@ -15,8 +17,8 @@
 
 <body>
 
-    <ul id="navbar">
-        <div class="container-fluid">
+    <div class="container-fluid">
+        <ul id="navbar">
             <div class="navbar" id="navbar_logo">
                 <!-- BronxCare Logo -->
                 <a href="https://www.bronxcare.org/" target="_blank">
@@ -44,8 +46,8 @@
                         Questions? Call 718-99-BRONX
                     </a>
             </div>
-        </div>
-    </ul>
+        </ul>
+    </div>
 
 
     <div class="sidenav" id="main_sidebar">
