--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
             </li>
             <li class="directions_sidenav_to"><h4>To:</h4>
                 <form class="directions_sidenav_to">
-                    <input type="text" placeholder="Enter destination here" value="1650 Grand Concourse, Bronx, NY 10457" class="directions_sidenav_to_entry" id="concourse_campus_covid_testing_to_entry">
+                    <input type="text" placeholder="Enter destination here" value="1661 Selwyn Avenue, Bronx, NY, USA" class="directions_sidenav_to_entry" id="concourse_campus_covid_testing_to_entry">
                 </form>
             </li>
             <li>
@@ -1194,7 +1194,7 @@
             </li>
             <li class="directions_sidenav_to"><h4>To:</h4>
                 <form class="directions_sidenav_to">
-                    <input type="text" placeholder="Enter destination here" value="1650 Grand Concourse, Bronx, NY 10457" class="directions_sidenav_to_entry" id="south_bronx_rx_inc_to_entry">
+                    <input type="text" placeholder="Enter destination here" value="1667 Selwyn Avenue, Bronx, NY 10457" class="directions_sidenav_to_entry" id="south_bronx_rx_inc_to_entry">
                 </form>
             </li>
             <li>
@@ -3242,7 +3242,7 @@
             </li>
             <li class="directions_sidenav_to"><h4>To:</h4>
                 <form class="directions_sidenav_to">
-                    <input type="text" placeholder="Enter destination here" value="1650 Selwyn Avenue, Bronx, NY 10457" class="directions_sidenav_to_entry" id="concourse_campus_selwyn_entrance_to_entry">
+                    <input type="text" placeholder="Enter destination here" value="1667 Selwyn Avenue, Bronx, NY 10457" class="directions_sidenav_to_entry" id="concourse_campus_selwyn_entrance_to_entry">
                 </form>
             </li>
             <li>
@@ -3295,7 +3295,7 @@
             </li>
             <li class="directions_sidenav_to"><h4>To:</h4>
                 <form class="directions_sidenav_to">
-                    <input type="text" placeholder="Enter destination here" value="1650 Grand Concourse, Bronx, NY 10457" class="directions_sidenav_to_entry" id="concourse_campus_emergency_entrance_to_entry">
+                    <input type="text" placeholder="Enter destination here" value="E Mt Eden Ave & Sheridan Avenue, Bronx, NY, USA" class="directions_sidenav_to_entry" id="concourse_campus_emergency_entrance_to_entry">
                 </form>
             </li>
             <li>
