--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <form  id="filter_dropdown">
             <select name="filter_options" id="filter_options">
                 <option value="all" id="all">All</option>
-                <option value="blhc" id="blhc">Bronx-Lebanon Hospital Center (BLHC)</option>
-                <option value="mlk" id="mlk">Dr. Martin Luther King Jr. Health Center (MLK)</option>
+                <option value="bchc" id="bchc">BronxCare Hospital Center (BCHC)</option>
+                <option value="mlk" id="mlk">Dr. Martin Luther King, Jr. Health Center (MLK)</option>
                 <option value="psych" id="psych">Psychiatry</option>
             </select>
         </form>
@@ -3205,7 +3205,7 @@
         <ul>
             <li class="location_sidenav_name_ambulatory"><a onclick="openLocationSidebar(0)"><i class="fa fa-arrow-circle-o-left fa-3x"></i></a><h2>Concourse Campus (Selwyn Avenue Entrance)</h2></li>
             <li class="location_sidenav_header">Address:</li>
-            <li class="location_sidenav_address">Across the street from 1650 Selwyn Avenue, Bronx, NY 10457</li>
+            <li class="location_sidenav_address">1650 Grand Concourse (Across the street from 1650 Selwyn Avenue), Bronx, NY 10457</li>
             <li class="location_sidenav_header">Contains the following practices:</li>
             <li class="location_sidenav_other_info">
                 <p class="location_sidenav_other_info_list" onclick="openPracticesSidebar(14)">7th Floor: Orthopedic Practice</p>
